Tweak logic